# Time-Series-Forecasting-via-LoRA-Fine-Tuned-Qwen2.5-Instruct-

./: LICENSE  Qwen_base_codes.ipynb  Qwen_grid_search_colab.ipynb  README.md  all_functions.py  environment_m2.yml  evaluation.py  flops.py  lora_skeleton.py  lora_skeleton_original.py  m2coursework.ipynb  preprocessor.py  pyproject.toml  requirements.txt
docs/source/: conf.py
src/: evaluation.py  flops.py  lora_skeleton.py  preprocessor.py  qwen.py
wandb/: latest-run
wandb/run-20250324_204728-zrau0r8g/: run-zrau0r8g.wandb
wandb/run-20250325_200716-jdi508xn/: run-jdi508xn.wandb
wandb/run-20250327_150519-9x7xwnda/: run-9x7xwnda.wandb
wandb/run-20250327_151348-e4gcgipf/: run-e4gcgipf.wandb
wandb/run-20250328_013515-jpvnup5g/: run-jpvnup5g.wandb
wandb/run-20250328_013813-u9s7uv4p/: run-u9s7uv4p.wandb
wandb/run-20250328_015459-8go65mdi/: run-8go65mdi.wandb
wandb/run-20250328_030229-ah6y0hmg/: run-ah6y0hmg.wandb
wandb/run-20250328_031445-ph3aswk2/: run-ph3aswk2.wandb
wandb/run-20250328_152647-5q2917wg/: run-5q2917wg.wandb
wandb/run-20250328_152937-un67ddhq/: run-un67ddhq.wandb
wandb/run-20250328_154027-n6s0vuwo/: run-n6s0vuwo.wandb
wandb/run-20250328_154358-ym5vsqaa/: run-ym5vsqaa.wandb
wandb/run-20250328_154740-3zv81h2j/: run-3zv81h2j.wandb
wandb/run-20250329_000809-owk47bd2/: run-owk47bd2.wandb
wandb/run-20250329_001103-dr3ceb7j/: run-dr3ceb7j.wandb
wandb/run-20250329_002118-l475adp6/: run-l475adp6.wandb
wandb/run-20250329_002446-mgwfdx6h/: run-mgwfdx6h.wandb
wandb/run-20250329_161911-dq1onra3/: run-dq1onra3.wandb
(+84 files in other folders)
