[project]
name = "m2cw"
version = "0.1.0"
description = "LoRA fine-tuning on Qwen2.5 for predator-prey time series forecasting"
authors = [{name = "Yihao Liu"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0",
    "transformers>=4.37",
    "accelerate",
    "h5py",
    "numpy",
    "matplotlib",
    "tqdm",
    "wandb"
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.2",
    "furo",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx.ext.napoleon"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
